--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="src/styles.css">
+    <link rel="shortcut icon" href="public/images/favicon.jpg" type="image/x-icon">
 </head>
 <body>
     
