develop-navbar-section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="shortcut icon" href="public/images/favicon.jpg" type="image/x-icon">
 </head>
 <body>
-    
+    <nav class="navbar">
+        <strong>AR</strong>
+        <div class="bars-navbar-portfolio">
+            <input type="checkbox" name="hamburger-btn" id="hamburger">
+            <label for="hamburger">
+                <span class="bars bar-top"></span>
+                <span class="bars bar-middle"></span>
+                <span class="bars bar-bottom"></span>
+            </label>
+        </div>
+    </nav>
 </body>
 </html>
