develop-header-section

--- a/index.html
+++ b/index.html
@@ -19,5 +19,21 @@
             </label>
         </div>
     </nav>
+    <header class="header">
+        <figure>
+            <img src="public/images/profile.webp" alt="Alireza Jalali">
+        </figure>
+        <h1>Alireza Jalali</h1>
+        <h2>Junior Frontend Developer</h2>
+        <button class="contact">
+            <a href="tel:+989966331808">Contact Me</a>
+        </button>
+        <h3>About Me</h3>
+        <h4>Get to know me</h4>
+        <p>Hi there. I'm Alireza Jalali, a passionate frontend developer who loves creating user-friendly and high-performance applications. I focus on building web applications that are easy to use and visually appealing. I enjoy facing challenges and am always eager to learn new things. I believe in the power of teamwork and love working with others to bring ideas to life. I'm always looking to improve my skills and stay updated with the latest trends and technologies in frontend development. Let's connect and collaborate on exciting projects!</p>
+        <button class="resume">
+            <a href="public/files/Resume.pdf">Download CV</a>
+        </button>
+    </header>
 </body>
 </html>
