--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="src/styles.css">
+    <link rel="stylesheet" href="src/style/styles.css">
     <link rel="shortcut icon" href="public/images/favicon.jpg" type="image/x-icon">
 </head>
 <body>
@@ -35,5 +35,7 @@
             <a href="public/files/Resume.pdf">Download CV</a>
         </button>
     </header>
+
+    <script src="src/js/main.js"></script>
 </body>
 </html>
