develop-form-section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
             <a href="public/files/Resume.pdf">Download CV</a>
         </button>
     </header>
+    <section class="form">
+        <h3>Get In Touch</h3>
+        <h4>Let's work together</h4>
+        <form action="" method="" enctype="multipart/form-data">
+            <label for="name">Name</label>
+            <input type="text" name="Name" id="name" placeholder="full name">
+            <label for="email">Email</label>
+            <input type="email" name="Email" id="email" placeholder="example@gmail.com">
+            <label for="message">Message</label>
+            <textarea name="Message" id="message" placeholder="Message..."></textarea>
+            <button type="submit">Get in Touch</button>
+        </form>
+    </section>
 
     <script src="src/js/main.js"></script>
 </body>
