--- a/index.html
+++ b/index.html
@@ -63,7 +63,21 @@
             </button>
         </a>
     </section>
+    <hr>
+    <footer class="footer">
+        <div class="social">
+            <ul>
+                <li><a href="https://linkedin.com/in/alirezadevelop/"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+                <li><a href="https://github.com/Alireza-Jalali/"><ion-icon name="logo-github"></ion-icon></a></li>
+                <li><a href="https://wa.me/+989966331808/"><ion-icon name="logo-whatsapp"></ion-icon></a></li>
+                <li><a href="https://youtube.com/@alirezadevelop/"><ion-icon name="logo-youtube"></ion-icon></a></li>
+            </ul>
+        </div>
+        <span>&copy; 2025 all rights reserved.</span>
+    </footer>
 
     <script src="src/js/main.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
