edit-youtube-link

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <li><a href="https://linkedin.com/in/alirezadevelop/"><ion-icon name="logo-linkedin"></ion-icon></a></li>
                 <li><a href="https://github.com/Alireza-Jalali/"><ion-icon name="logo-github"></ion-icon></a></li>
                 <li><a href="https://wa.me/+989966331808/"><ion-icon name="logo-whatsapp"></ion-icon></a></li>
-                <li><a href="https://youtube.com/@alirezadevelop/"><ion-icon name="logo-youtube"></ion-icon></a></li>
+                <li><a href="https://youtube.com/@itsalirezajalali/"><ion-icon name="logo-youtube"></ion-icon></a></li>
             </ul>
         </div>
         <span>&copy; 2025 all rights reserved.</span>
