develop-hamburger-menu

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                 <span class="bars bar-middle"></span>
                 <span class="bars bar-bottom"></span>
             </label>
+            <ul class="hamburger-menu">
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Resume</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
         </div>
     </nav>
     <header class="header">
