--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="src/style/styles.css">
     <link rel="shortcut icon" href="public/images/favicon.jpg" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="src/style/styles.css">
 </head>
 <body>
     <nav class="navbar">
@@ -18,10 +19,10 @@
                 <span class="bars bar-bottom"></span>
             </label>
             <ul class="hamburger-menu">
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Resume</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#resume">Resume</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -34,10 +35,10 @@
         <button class="contact">
             <a href="tel:+989966331808">Contact Me</a>
         </button>
-        <h3>About Me</h3>
+        <h3 id="about">About Me</h3>
         <h4>Get to know me</h4>
         <p>Hi there. I'm Alireza Jalali, a passionate frontend developer who loves creating user-friendly and high-performance applications. I focus on building web applications that are easy to use and visually appealing. I enjoy facing challenges and am always eager to learn new things. I believe in the power of teamwork and love working with others to bring ideas to life. I'm always looking to improve my skills and stay updated with the latest trends and technologies in frontend development. Let's connect and collaborate on exciting projects!</p>
-        <button class="resume">
+        <button class="resume" id="resume">
             <a href="public/files/Resume.pdf">Download CV</a>
         </button>
     </header>
@@ -46,15 +47,15 @@
         <h4>Let's work together</h4>
         <form action="" method="" enctype="multipart/form-data">
             <label for="name">Name</label>
-            <input type="text" name="Name" id="name" placeholder="full name">
+            <input type="text" name="Name" id="name" placeholder="Full name">
             <label for="email">Email</label>
-            <input type="email" name="Email" id="email" placeholder="example@gmail.com">
+            <input type="email" name="Email" id="email" placeholder="Example@gmail.com">
             <label for="message">Message</label>
             <textarea name="Message" id="message" placeholder="Message..."></textarea>
             <button type="submit">Get in Touch</button>
         </form>
     </section>
-    <section class="work">
+    <section class="work" id="contact">
         <p>Let's<br>Work Together</p>
         <a href="mailto:its.alirezajalali@gmail.com">
             <button class="email">
@@ -85,5 +86,6 @@
     <script src="src/js/main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
