fix-hamburger-menu-bugs

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <li><a href="https://youtube.com/@itsalirezajalali/"><ion-icon name="logo-youtube"></ion-icon></a></li>
             </ul>
         </div>
-        <span>&copy; 2025 all rights reserved.</span>
+        <span>2025 all rights reserved.</span>
     </footer>
 
     <script src="src/js/main.js"></script>
